<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".actividades.BusquedaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sombra_inferior_layouts"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:background="@drawable/fondo_busqueda">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@null"
                android:src="@drawable/ic_arrow_left_50"/>

            <EditText
                android:id="@+id/buscador"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:imeOptions="actionSearch"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:background="@null"
                android:singleLine="true"
                android:hint="@string/txt_busqueda"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:drawableEnd="@drawable/ic_search_40"/>

        </LinearLayout>

        <HorizontalScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/categoria_restaurante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/fondo_busqueda">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/icon_uf2e7"
                        android:fontFamily="@font/font_awesome_6_free_solid_900" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/txt_restaurante" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categoria_hotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/fondo_busqueda">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/icon_uf594"
                        android:fontFamily="@font/font_awesome_6_free_solid_900" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/txt_hotel" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categoria_centro_comercial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/fondo_busqueda">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/icon_uf54e"
                        android:fontFamily="@font/font_awesome_6_free_solid_900" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/txt_centro_comercial" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categoria_tienda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/fondo_busqueda">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/icon_uf07a"
                        android:fontFamily="@font/font_awesome_6_free_solid_900" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/txt_tienda" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categoria_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/fondo_busqueda">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/icon_uf0fc"
                        android:fontFamily="@font/font_awesome_6_free_solid_900" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/txt_bar" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categoria_cafe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/fondo_busqueda">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/icon_uf7b6"
                        android:fontFamily="@font/font_awesome_6_free_solid_900" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/txt_cafe" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categoria_parque"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/fondo_busqueda">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/icon_uf1bb"
                        android:fontFamily="@font/font_awesome_6_free_solid_900" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/txt_parque" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/categoria_museo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_marginEnd="3dp"
                    android:background="@drawable/fondo_busqueda">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/icon_uf66f"
                        android:fontFamily="@font/font_awesome_6_free_solid_900" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/txt_museo" />
                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/contenido"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>