<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.RegistroActivity">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/baseline_account_circle_24"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/baseline_question_mark_24"
        android:layout_margin="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#00BCD4"
        ></com.google.android.material.floatingactionbutton.FloatingActionButton>

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:gravity="center"
        android:hint="@string/txt_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:gravity="center"
        android:hint="@string/txt_nickname"
        android:inputType="textPersonName"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="310dp"
        android:hint="@string/txt_email"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="60dp"
        android:gravity="center"
        android:hint="@string/txt_contrasenia"
        android:inputType="textPassword" />


</RelativeLayout>