<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardElevation="7dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="100">

        <ImageView
            android:id="@+id/img_lugar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="100"
            android:src="@mipmap/ic_launcher" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/nombre_lugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre_lugar"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/estado_lugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/design_default_color_secondary"
                android:text="@string/icon_uf017"
                android:textSize="20sp"
                android:fontFamily="@font/font_awesome_6_free_solid_900"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/btn_aprobar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="40sp"
                    android:textColor="@color/green"
                    android:text="@string/icon_uf058"
                    android:fontFamily="@font/font_awesome_6_free_solid_900"/>

            <TextView
                android:id="@+id/btn_rechazar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="40sp"
                android:textColor="@color/red"
                android:text="@string/icon_uf057"
                android:fontFamily="@font/font_awesome_6_free_solid_900"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>