<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/img_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_person_outline_40" />
        <TextView
            android:id="@+id/nombre_usuario_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_nombre_usuario"
            android:layout_toEndOf="@id/img_usuario"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/btn_eliminar_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_uf1f8"
            android:textSize="30sp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/font_awesome_6_free_solid_900" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/lista_estrellas_comentario"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/e_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/icon_uf005"
                android:fontFamily="@font/font_awesome_6_free_solid_900" />

            <TextView
                android:id="@+id/e_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/icon_uf005"
                android:fontFamily="@font/font_awesome_6_free_solid_900" />

            <TextView
                android:id="@+id/e_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/icon_uf005"
                android:fontFamily="@font/font_awesome_6_free_solid_900" />

            <TextView
                android:id="@+id/e_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/icon_uf005"
                android:fontFamily="@font/font_awesome_6_free_solid_900" />

            <TextView
                android:id="@+id/e_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/icon_uf005"
                android:fontFamily="@font/font_awesome_6_free_solid_900" />

        </LinearLayout>
        <TextView
            android:id="@+id/fecha_comentario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/txt_fecha" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_comentario"
            android:textSize="16sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/sombra_inferior_layouts" />

</LinearLayout>